--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				let smallAlph='abcdefghijklmnopqrstuvwxyz0';
 				let capAlph='ABCDEFGHIJKLMNOPQRSTUVWXYZ';
 				let numbers='1234567890';
-				let symbols='!"#$%&()*+,-./:;<=>?@[\]^_`{|}~';
+				let symbols='!@#$';
 				
 				let str='';
 				var isabcChecked = document.getElementById("abcCheck").checked;
